--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,18 @@ environment:
   sdk: '>=3.3.0-279.0.dev <4.0.0'
 
 dependencies:
+  build_runner: ^2.4.8
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_mobx: ^2.2.0+2
+  flutter_modular: ^6.3.2
+  intl: ^0.18.1
+  mobx: ^2.3.0+1
+  mobx_codegen: ^2.6.0+1
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
