--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_mobx: ^2.2.0+2
   flutter_modular: ^6.3.2
+  google_fonts: ^6.1.0
   intl: ^0.18.1
   mobx: ^2.3.0+1
   mobx_codegen: ^2.6.0+1
